--- a/client/app.json
+++ b/client/app.json
@@ -1,15 +1,15 @@
 {
   "pages": [
-      "pages/checkRecord/checkRecord",
-    "pages/login/index",
-      "pages/addStore/storeForm",
+      "pages/login/login",
+    "pages/displayInfo/displayInfo",
+      "pages/inStore/inStore",
+    "pages/addStore/storeForm",
    
+
     "pages/index/index",
     "pages/addCgi/addCgi",
-    "pages/location/location",
-    "pages/store/store"
-  
-  
+    "pages/location/location"
+    
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
