1、修复了扫描药品条码，未带出药品编码和名称的bug 2、增加记住账号和密码功能，避免安卓机器退出后需再次手动录入账号密码 3、去掉了药品列表“否”列 4、增加了当日寻访记录默认按照时间倒序排列 5、入店不强制拍照

--- a/client/app.json
+++ b/client/app.json
@@ -1,6 +1,6 @@
 {
   "pages": [
-  
+
 "pages/login/login",
        
         "pages/displayInfo/displayInfo",
@@ -19,7 +19,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "智能巡店",
+    "navigationBarTitleText": "康侨巡店系统",
     "navigationBarTextStyle": "black"
   }
 }
