9月8号到9月13日的更新，拖到12月26日才提交，该死；

--- a/client/app.json
+++ b/client/app.json
@@ -1,17 +1,22 @@
 {
   "pages": [
+ 
+    "pages/login/login",
+    "pages/inStore/inStore",
+    "pages/location/location",
+    "pages/displayInfo/displayInfo",
 
-"pages/login/login",
+
        
-        "pages/displayInfo/displayInfo",
+       
 
-      "pages/inStore/inStore",
+
     "pages/addStore/storeForm",
    
 
     "pages/index/index",
-    "pages/addCgi/addCgi",
-    "pages/location/location"
+    "pages/addCgi/addCgi"
+
 
     
   ],
