删除多余的sever端文件，增加扫描药品监管码功能

--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
 		"minified": true,
 		"newFeature": true
 	},
-	"appid": "wxb16636012323a48a",
+	"appid": "wxcb2b2c1428a6188d",
 	"projectname": "znxd",
 	"compileType": "miniprogram",
 	"condition": {}
